Closed Bug 990268 Opened 10 years ago Closed 10 years ago

mStatus is not sent from FTPChannelParent to FTPChannelChild

Categories

(Core :: Networking, defect)

25 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla31

People

(Reporter: sworkman, Assigned: sworkman)

References

Details

Attachments

(1 file)

Follow-up from 985230.
Comment on attachment 8400171 [details] [diff] [review]
v1.0 Send FTPChannelParent::mStatus in IPDL messages to FTPChannelChild

Honza, this is a follow up to bug 985230; Basically, mStatus in HttpChannelChild was not in sync with mStatus in HttpChannelParent. Jason worked on the previous patch for HTTP, and this is the follow up for FTP. Please take a look.

The idea is to send mStatus with SendOnStart and SendOnData, just as Jason's patch did with HTTP. There are also some style changes - some prototypes were being changed anyway, so it makes sense to me to clean them up a bit and make them easier to change next time.

Let me know what you think. Thanks!
Attachment #8400171 - Flags: review?(honzab.moz)
Comment on attachment 8400171 [details] [diff] [review]
v1.0 Send FTPChannelParent::mStatus in IPDL messages to FTPChannelChild

Review of attachment 8400171 [details] [diff] [review]:
-----------------------------------------------------------------

::: netwerk/protocol/ftp/FTPChannelChild.cpp
@@ +226,5 @@
>  
>  class FTPStartRequestEvent : public ChannelEvent
>  {
> +public:
> +  FTPStartRequestEvent(FTPChannelChild* aChild, const nsresult& aChannelStatus,

maybe const nsresult& aChannelStatus, on a new line too?
Attachment #8400171 - Flags: review?(honzab.moz) → review+
(In reply to Honza Bambas (:mayhemer) from comment #3)
> Comment on attachment 8400171 [details] [diff] [review]
> v1.0 Send FTPChannelParent::mStatus in IPDL messages to FTPChannelChild
> 
> Review of attachment 8400171 [details] [diff] [review]:
> -----------------------------------------------------------------
> 
> ::: netwerk/protocol/ftp/FTPChannelChild.cpp
> @@ +226,5 @@
> >  
> >  class FTPStartRequestEvent : public ChannelEvent
> >  {
> > +public:
> > +  FTPStartRequestEvent(FTPChannelChild* aChild, const nsresult& aChannelStatus,
> 
> maybe const nsresult& aChannelStatus, on a new line too?

Yeah - I pretty much just went with what clang-format suggested with that patch, but it didn't look right. Fixed that and the other two event classes.

https://hg.mozilla.org/integration/mozilla-inbound/rev/32c1e7286364
https://hg.mozilla.org/mozilla-central/rev/32c1e7286364
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla31
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: