Bug 990268 - Send FTPChannelParent::mStatus in IPDL messages to FTPChannelChild r=mayhemer